Fix z-index popup notification
ERM24852

[4.0.x]

--- a/resources/stylesheets/fixes/desktop.less
+++ b/resources/stylesheets/fixes/desktop.less
@@ -48,3 +48,8 @@ body.mediawiki .oo-ui-windowManager-modal > .oo-ui-dialog,
 .oo-ui-window {
 	z-index: 9999 !important;
 }
+
+// Fix notification settings popup
+.mw-echo-ui-overlay {
+	z-index: inherit !important;
+}
